--- a/praktikum-4/assets/css/style_tugas.css
+++ b/praktikum-4/assets/css/style_tugas.css
@@ -12,11 +12,8 @@ body {
 
 .container {
   width: 100%;
-  max-width: 1100px;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 15px;
-  padding-left: 15px;
 }
 
 .sidebar {
@@ -57,6 +54,11 @@ body {
   font-size: 20px;
   color: #fff;
   font-weight: bold;
+}
+
+.sidebar ul li a:hover {
+  background-color: #fff;
+  color: #000;
 }
 
 @media screen and (max-width: 768px) {
@@ -149,6 +151,10 @@ body {
   font-weight: bold;
 }
 
+.hero .hero-content .action-btn:hover {
+  background-color: rgb(40, 36, 55);
+}
+
 @media screen and (max-width: 768px) {
   .content {
     margin-left: 0;
@@ -184,9 +190,6 @@ body {
 }
 
 .footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
   width: 100%;
   background-color: #a7a5a5;
   color: #fff;
@@ -207,6 +210,7 @@ body {
 
 .footer ul li {
   margin: 0 60px;
+  cursor: pointer;
 }
 
 .footer ul li img {
