--- a/praktikum-4/assets/css/style_tugas.css
+++ b/praktikum-4/assets/css/style_tugas.css
@@ -95,7 +95,6 @@ body {
     padding: 20px;
     text-decoration: none;
     color: #fff;
-    transition: 0.5s;
   }
 }
 
@@ -105,7 +104,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 100px;
+  margin-left: 60px;
 }
 
 .hero {
